# virtDrone

./: .gitignore  BUILD_FIXES.md  CMakeLists.txt  DRONE_ARCHITECTURE.md  Dockerfile.build  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  requirements.txt  test.txt  test_ground_lock_short.txt  test_weather_smoke.txt
config/: altitude_controller.yaml  altitude_controller_fast.yaml  attitude_controller.yaml  weather.yaml
config/missions/: hover_and_land.yaml  hover_and_move.yaml  rectangle_patrol.yaml
docker/: Dockerfile
docs/: README.md  architecture.md  changelog.md  current-state.md  how-to-use.md  roadmap.md  simulation-mission-format.md
docs/tutorials/: simulation-real-drone-interaction.md  simulation_telemetry.csv
include/drone/: drone_data_types.h
include/drone/config/: altitude_controller_config.h  attitude_controller_config.h  config_base.h
include/drone/control/: position_controller.h
include/drone/mission/: completion_evaluator.h  mission_executor.h  mission_loader.h  mission_types.h
include/drone/model/: README.MD  drone_base.h  drone_physical.h  quadrocopter.h  utils.h
include/drone/model/components/: altitude_controler.h  battery_base.h  battery_cell.h  elec_motor.h  elect_motor.h  esc.h  gps_module_base.h  gps_sensor.h
include/drone/model/sensors/: base_sensor.h  gps_position_sensor.h  gps_velocity_sensor.h  temperature_sensor.h
include/drone/runtime/: real_drone.h
include/simulator/: quadrosimulator.h  simulation_base.h
include/simulator/config/: weather_config.h
include/simulator/environment/: weather_model.h
include/simulator/physics/: battery_cell_physics.h  battery_sim.h  force_dynamics.h  gps_physics.h  gps_sim.h  motor_physics.h  thrust_model.h
include/simulator/runtime/: noisy_sensor_source.h
libs/common/: math_utils.cpp
src/drone/: Dockerfile
src/drone/config/: attitude_controller_config.cpp
src/drone/control/: control.cpp  position_controller.cpp
src/drone/mission/: completion_evaluator.cpp  mission_executor.cpp  mission_loader.cpp
src/drone/model/: model.cpp  quadrocopter.cpp
src/drone/model/components/: elect_motor.cpp  gps_sensor.cpp
src/drone/model/sensors/: base_sensor.cpp  gps_position_sensor.cpp  gps_velocity_sensor.cpp  temperature_sensor.cpp
src/drone/telemetry/: telemetry.cpp
src/simulator/: Dockerfile  main.cpp  quadrosimulator.cpp  simulation_base.cpp
src/simulator/environment/: environment.cpp  weather_model.cpp
src/simulator/integration/: integration.cpp
src/simulator/physics/: battery_cell_physics.cpp  battery_sim.cpp  force_dynamics.cpp  gps_physics.cpp  gps_sim.cpp  motor_physics.cpp  physics.cpp  thrust_model.cpp
src/web/: Dockerfile
src/web/backend/: backend.py
tests/: CMakeLists.txt
tests/integration/drone/mission/: test_mission_executor_transitions.cpp
tests/unit/drone/control/: test_position_controller.cpp
tests/unit/drone/mission/: test_mission_loader.cpp
tests/unit/drone/model/: test_battery_base.cpp  test_drone_base.cpp  test_utils.cpp
tests/unit/drone/model/component/: test_alt_controller.cpp  test_elect_motor.cpp  test_esc_logic.cpp  test_gps_sensor.cpp  test_real_drone_mixer.cpp
tests/unit/drone/model/sensors/: test_base_sensor.cpp  test_temperature_sensor.cpp
tests/unit/simulator/: test_quadrosimulator_ground_lock.cpp  test_simulation_base.cpp
tests/unit/simulator/config/: test_weather_config.cpp
tests/unit/simulator/environment/: test_weather_model.cpp
tests/unit/simulator/physics/: test_force_dynamics.cpp  test_gps_sim.cpp  test_motor_physics.cpp
tests/unit/simulator/runtime/: test_noisy_sensor_source_gps.cpp
tests/unit/tools/: test_generate_chart.py
tests/unit/web/: test_backend.py
tools/scripts/: generate_chart.py  generate_mission_chart.py
